--- a/vision_election_vue_app/package.json
+++ b/vision_election_vue_app/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@okta/okta-vue": "^1.1.1",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-axios": "^2.1.4",
+    "vue-router": "^3.1.3",
+    "vuejs-logger": "1.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
