--- a/vision_election_vue_app/package.json
+++ b/vision_election_vue_app/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0",
     "core-js": "^2.6.5",
+    "jquery": "^3.4.0",
+    "popper.js": "^1.15.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.1.3",
