--- a/vision_election_vue_app/package.json
+++ b/vision_election_vue_app/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "nyc --reporter=text vue-cli-service test:unit"
   },
   "dependencies": {
     "@okta/okta-vue": "^1.1.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0",
+    "chai": "^4.2.0",
     "core-js": "^2.6.5",
     "jquery": "^3.4.0",
     "popper.js": "^1.15.0",
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
+    "@vue/cli-plugin-unit-mocha": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "@vue/test-utils": "^1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
@@ -30,12 +33,14 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "expect": "^24.9.0",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "jsdom": "^15.1.1",
     "jsdom-global": "^3.0.2",
-    "mocha": "^6.2.0",
-    "mocha-webpack": "^1.1.0",
+    "mocha": "^6.2.1",
+    "mocha-webpack": "^2.0.0-beta.0",
     "nyc": "^14.1.1",
     "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.41.0",
     "webpack-node-externals": "^1.7.2"
   },
   "eslintConfig": {
@@ -60,5 +65,20 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
+  ],
+
+  "nyc": {
+    "include": [
+      "src/**/*.vue",
+      "src/**/*.js"
+    ],
+    "instrument": true,
+    "sourceMap": false,
+    "all": true,
+    "extension": [
+      ".js",
+      ".vue"
   ]
+ 
+   }
 }
