--- a/vision_election_vue_app/package.json
+++ b/vision_election_vue_app/package.json
@@ -15,10 +15,12 @@
     "bootstrap-vue": "^2.0.0",
     "chai": "^4.2.0",
     "core-js": "^2.6.5",
+    "fusioncharts": "^3.14.1",
     "jquery": "^3.4.0",
     "popper.js": "^1.15.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-fusioncharts": "^3.0.4",
     "vue-router": "^3.1.3",
     "vuejs-logger": "1.5.3"
   },
@@ -66,7 +68,6 @@
     "> 1%",
     "last 2 versions"
   ],
-
   "nyc": {
     "include": [
       "src/**/*.vue",
@@ -78,7 +79,6 @@
     "extension": [
       ".js",
       ".vue"
-  ]
- 
-   }
+    ]
+  }
 }
