--- a/SpringBootVueApplication/build.gradle
+++ b/SpringBootVueApplication/build.gradle
@@ -24,9 +24,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
+	compile 'org.dbunit:dbunit:2.5.0'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testCompile 'com.h2database:h2:1.4.179'
 }
 
 test {
